@@ -1,13 +1,22 @@
 package com.clokey.server.domain.cloth.application;
 
+import com.clokey.server.domain.cloth.domain.repository.ClothImageRepository;
+import com.clokey.server.domain.cloth.domain.repository.ClothRepository;
+import com.clokey.server.domain.cloth.dto.ClothResponseDTO;
+import com.clokey.server.domain.cloth.exception.ClothException;
+import com.clokey.server.domain.folder.domain.repository.ClothFolderRepository;
+import com.clokey.server.domain.history.domain.repository.HistoryClothRepository;
+import com.clokey.server.domain.history.domain.repository.HistoryRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -20,10 +29,6 @@ import com.clokey.server.domain.cloth.converter.ClothConverter;
 import com.clokey.server.domain.cloth.domain.entity.Cloth;
 import com.clokey.server.domain.cloth.domain.entity.ClothImage;
 import com.clokey.server.domain.cloth.dto.ClothRequestDTO;
-import com.clokey.server.domain.cloth.dto.ClothResponseDTO;
-import com.clokey.server.domain.folder.application.ClothFolderRepositoryService;
-import com.clokey.server.domain.history.application.HistoryClothRepositoryService;
-import com.clokey.server.domain.history.application.HistoryRepositoryService;
 import com.clokey.server.domain.history.domain.entity.History;
 import com.clokey.server.domain.member.application.MemberRepositoryService;
 import com.clokey.server.domain.model.entity.enums.ClothSort;
@@ -38,14 +43,14 @@ import com.clokey.server.global.infra.s3.S3ImageService;
 @RequiredArgsConstructor
 public class ClothServiceImpl implements ClothService {
 
-    private final ClothRepositoryService clothRepositoryService;
-    private final ClothImageRepositoryService clothImageRepositoryService;
-    private final ClothFolderRepositoryService clothFolderRepositoryService;
-    private final HistoryClothRepositoryService historyClothRepositoryService;
-    private final HistoryRepositoryService historyRepositoryService;
+    private final ClothImageRepository clothImageRepository;
+    private final ClothFolderRepository clothFolderRepository;
+    private final HistoryClothRepository historyClothRepository;
+    private final HistoryRepository historyRepository;
     private final S3ImageService s3ImageService;
     private final SearchRepositoryService searchRepositoryService;
     private final MemberRepositoryService memberRepositoryService;
+    private final ClothRepository clothRepository;
 
     private static final String FAILED_ES_UPDATE_SYNC_CLOTH_KEY = "failed_es_update_sync_cloth";
     private static final String FAILED_ES_DELETE_SYNC_CLOTH_KEY = "failed_es_delete_sync_cloth";
@@ -54,7 +59,7 @@ public class ClothServiceImpl implements ClothService {
     @Transactional(readOnly = true)
     public ClothResponseDTO.ClothPopupViewResult readClothPopupInfoById(Long clothId) {
 
-        Cloth cloth = clothRepositoryService.findById(clothId);
+        Cloth cloth = clothRepository.findById(clothId).orElseThrow(()-> new ClothException(ErrorStatus.NO_SUCH_CLOTH));
 
         return ClothConverter.toClothPopupViewResult(cloth);
     }
@@ -63,7 +68,7 @@ public class ClothServiceImpl implements ClothService {
     @Transactional(readOnly = true)
     public ClothResponseDTO.ClothEditViewResult readClothEditInfoById(Long clothId){
 
-        Cloth cloth = clothRepositoryService.findById(clothId);
+        Cloth cloth = clothRepository.findById(clothId).orElseThrow(()-> new ClothException(ErrorStatus.NO_SUCH_CLOTH));
 
         return ClothConverter.toClothEditViewResult(cloth);
     }
@@ -72,7 +77,7 @@ public class ClothServiceImpl implements ClothService {
     @Transactional(readOnly = true)
     public ClothResponseDTO.ClothDetailViewResult readClothDetailInfoById(Long clothId){
 
-        Cloth cloth = clothRepositoryService.findById(clothId);
+        Cloth cloth = clothRepository.findById(clothId).orElseThrow(()-> new ClothException(ErrorStatus.NO_SUCH_CLOTH));
 
         return ClothConverter.toClothDetailViewResult(cloth);
     }
@@ -86,7 +91,7 @@ public class ClothServiceImpl implements ClothService {
         String nickname= memberRepositoryService.findByClokeyId(ownerClokeyId).getNickname();
 
         Pageable pageable = PageRequest.of(page-1, size);
-        Page<Cloth> clothes = clothRepositoryService.findByClosetFilters(ownerClokeyId, requesterId, categoryId, season, sort, pageable);
+        Page<Cloth> clothes = clothRepository.findByClosetFilters(ownerClokeyId, requesterId, categoryId, season, sort.toString(), pageable);
 
         List<ClothResponseDTO.ClothPreview> clothPreviews = ClothConverter.toClothPreviewList(clothes);
 
@@ -100,18 +105,19 @@ public class ClothServiceImpl implements ClothService {
 
         String nickname = memberRepositoryService.findMemberById(memberId).getNickname();
 
-        List<History> histories = historyRepositoryService.findHistoriesByMemberWithinMonth(memberId);
+        LocalDate monthAgo = LocalDate.now().minusMonths(1);
+        List<History> histories = historyRepository.findHistoriesWithinMonth(memberId, monthAgo);
 
         List<Cloth> clothes = histories.stream()
-                .flatMap(history -> historyClothRepositoryService.findAllClothByHistoryId(history.getId()).stream())
-                .collect(Collectors.toList());
+                .flatMap(history -> historyClothRepository.findAllClothsByHistoryId(history.getId()).stream())
+                .toList();
 
         Map<Category, Long> categoryCountMap = clothes.stream()
                 .collect(Collectors.groupingBy(Cloth::getCategory, Collectors.counting()));
 
         List<Map.Entry<Category, Long>> filteredEntries = categoryCountMap.entrySet().stream()
                 .filter(entry -> entry.getKey().getParent() != null)
-                .collect(Collectors.toList());
+                .toList();
 
         if (filteredEntries.isEmpty()) {
             throw new CategoryException(ErrorStatus.CATEGORY_NOT_FOUND_IN_SUMMARY);
@@ -124,11 +130,11 @@ public class ClothServiceImpl implements ClothService {
                 .min(Map.Entry.comparingByValue())
                 .orElseThrow(() -> new CategoryException(ErrorStatus.CATEGORY_NOT_FOUND_IN_SUMMARY));
 
-        List<Cloth> frequentClothes = clothRepositoryService.findBySmartSummaryFilters(
+        List<Cloth> frequentClothes = findBySmartSummaryFilters(
                 SummaryFrequency.FREQUENT, memberId, frequentEntry.getKey().getId());
         List<ClothResponseDTO.ClothPreview> frequentClothPreviews = ClothConverter.toClothPreviewList(frequentClothes);
 
-        List<Cloth> infrequentClothes = clothRepositoryService.findBySmartSummaryFilters(
+        List<Cloth> infrequentClothes = findBySmartSummaryFilters(
                 SummaryFrequency.INFREQUENT, memberId, infrequentEntry.getKey().getId());
         List<ClothResponseDTO.ClothPreview> infrequentClothPreviews = ClothConverter.toClothPreviewList(infrequentClothes);
 
@@ -149,7 +155,7 @@ public class ClothServiceImpl implements ClothService {
                                                           ClothRequestDTO.ClothCreateOrUpdateRequest request,
                                                           MultipartFile imageFile) {
 
-        Cloth cloth = clothRepositoryService.save(ClothConverter.toCloth(memberId, request));
+        Cloth cloth = clothRepository.save(ClothConverter.toCloth(memberId, request));
 
         String imageUrl = (imageFile != null) ? s3ImageService.upload(imageFile) : null;
 
@@ -158,7 +164,7 @@ public class ClothServiceImpl implements ClothService {
                 .cloth(cloth)
                 .build();
 
-        clothImageRepositoryService.save(clothImage);
+        clothImageRepository.save(clothImage);
 
         asyncUpdatedClothFromES(cloth);
 
@@ -171,7 +177,7 @@ public class ClothServiceImpl implements ClothService {
                                 ClothRequestDTO.ClothCreateOrUpdateRequest request,
                                 MultipartFile imageFile){
 
-        Cloth existingCloth = clothRepositoryService.findById(clothId);
+        Cloth existingCloth = clothRepository.findById(clothId).orElseThrow(()-> new ClothException(ErrorStatus.NO_SUCH_CLOTH));
 
         String imageUrl = (imageFile != null) ? s3ImageService.upload(imageFile) : null;
 
@@ -195,10 +201,10 @@ public class ClothServiceImpl implements ClothService {
     @Override
     @Transactional
     public void deleteClothById(Long clothId){
-        historyClothRepositoryService.deleteAllByClothId(clothId);
-        clothFolderRepositoryService.deleteAllByClothId(clothId);
-        clothImageRepositoryService.deleteByClothId(clothId);
-        clothRepositoryService.deleteById(clothId);
+        historyClothRepository.deleteAllByClothId(clothId);
+        clothFolderRepository.deleteAllByClothId(clothId);
+        clothImageRepository.deleteByClothId(clothId);
+        clothRepository.deleteById(clothId);
 
         asyncDeletedClothFromES(clothId);
     }
@@ -223,5 +229,16 @@ public class ClothServiceImpl implements ClothService {
             searchRepositoryService.saveFailedDeletionES(clothId,FAILED_ES_DELETE_SYNC_CLOTH_KEY); // 실패한 ID 저장 후 재시도 가능하도록 처리
             throw new SearchException(ErrorStatus.ELASTIC_SEARCH_DELETE_FAULT);
         }
+    }
+
+    private List<Cloth> findBySmartSummaryFilters(
+            @Param("type") SummaryFrequency type,
+            @Param("memberId") Long memberId,
+            @Param("categoryId") Long categoryId
+    ){
+        return switch (type) {
+            case FREQUENT -> clothRepository.findMostFrequentClothList(memberId,categoryId);
+            case INFREQUENT -> clothRepository.findLeastFrequentClothList(memberId,categoryId);
+        };
     }
 }
